--- a/README
+++ b/README
@@ -1,6 +1,6 @@
--------------------------------
-| the-dutch-protect-and-serve |
--------------------------------
+---------------------------
+| dutch-protect-and-serve |
+---------------------------
 
 institutional heroin dealers
 
