--- a/README
+++ b/README
@@ -7,4 +7,4 @@ institutional heroin dealers
 # politie van nederland
 https://nl.wikipedia.org/wiki/Politie_in_Nederland
 
-nederland ® 2002-2022
+doctor nekschot in action ® 2002-2022
