--- a/README
+++ b/README
@@ -2,7 +2,8 @@
 | dutch-protect-and-serve |
 ---------------------------
 
-institutional heroin dealers
+'institutional heroin dealers'
+
 
 # politie van nederland
 https://nl.wikipedia.org/wiki/Politie_in_Nederland
