--- a/README
+++ b/README
@@ -5,6 +5,27 @@
 'institutional heroin dealers'
 
 
+# municipal health service
+https://en.wikipedia.org/wiki/Municipal_Health_Service
+
+# huisartsenpost
+https://nl.wikipedia.org/wiki/Huisartsenpost
+
+# methadone
+https://en.wikipedia.org/wiki/Methadone
+
+# fentanyl
+https://en.wikipedia.org/wiki/Fentanyl
+
+# heroine
+https://nl.wikipedia.org/wiki/Hero%C3%AFne
+
+# gaskamer
+https://nl.wikipedia.org/wiki/Gaskamer
+
+# mass killng
+https://en.wikipedia.org/wiki/Mass_killing
+
 # erasmusbrug
 https://nl.wikipedia.org/wiki/Erasmusbrug
 
