--- a/README
+++ b/README
@@ -20,6 +20,9 @@ https://en.wikipedia.org/wiki/Fentanyl
 # heroine
 https://nl.wikipedia.org/wiki/Hero%C3%AFne
 
+# poisening
+https://en.wikipedia.org/wiki/Poisoning
+
 # gaskamer
 https://nl.wikipedia.org/wiki/Gaskamer
 
