--- a/README
+++ b/README
@@ -26,6 +26,9 @@ https://en.wikipedia.org/wiki/Poisoning
 # gaskamer
 https://nl.wikipedia.org/wiki/Gaskamer
 
+# cytokine release syndrome
+https://en.wikipedia.org/wiki/Cytokine_release_syndrome
+
 # mass killng
 https://en.wikipedia.org/wiki/Mass_killing
 
